--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   flutter_bloc: ^8.1.6
+  bloc: ^8.0.1
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
